--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -4,7 +4,8 @@
 }
 
 #heroImage {
-    width: 50vw;
-    height: 50vh;
+    width: 500px;
+    height: 500px;
     z-index: 999;
+    object-fit: contain;
 }
